@@ -1,3 +1,8 @@
+2006-01-17  Rodrigo Moya <rodrigo@novell.com>
+
+	* gnome-settings-font.c (load_cursor): use g_mkdir_with_parents instead
+	of creating the whole hierarchy by hand.
+
 2005-11-14  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* actions/acme-volume-dummy.c: (acme_volume_dummy_finalize):
